# ssh-channels-hub

./: .gitignore  AGENTS.md  Cargo.toml  README.md  configs.example.toml
configs/: config.example.toml
docs/: HowToUse.md  README.md  architecture.md  configuration.md  modules.md  testing.md  workflow.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  port_check.rs  service.rs  ssh.rs  ssh_config.rs
tests/: config_parse_test.rs  test_ssh_config
