[package]
name = "ssh-channels-hub"
version = "0.2.0"
edition = "2021"

[dependencies]
russh = "0.45"
russh-keys = "0.45"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["time"] }
backon = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
dirs = "5.0"
